--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,9 @@
   <title>Document</title>
   <base href="/">
 
-  <link rel="stylesheet" href="/dist/css/bundle.css">
-  <script src="/dist/js/lib.js"></script>
-  <script src="/dist/js/bundle.js"></script>
+  <link rel="stylesheet" href="/dist/bundle.css">
+  <script src="/dist/lib.js"></script>
+  <script src="/dist/bundle.js"></script>
 </head>
 <body ng-controller="rootCtrl">
   <div ui-view></div>
